# chatboxd

./: README.md  index.html  letterboxd.db  pyproject.toml  template_secrets.env
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
data_ingestion/: main.py
data_ingestion/user_data/: diary.csv
src/: config.py  enviroment_config.py  main.py
src/catalog/: prompts.py  styles.py  translations.py
src/data_ingestion/: main.py  sqlite_utils.py
src/data_ingestion/user_data/: diary.csv  reviews.csv
src/scripts/: agent_cli.py
src/services/: agent_tools.py  daily_message_service.py  graph_services.py  langgraph_service.py  llm_service.py  movies_data_service.py  sqlite_service.py
src/utils/: agent_tools.py  agent_utils.py  chat_utils.py  file_loader_utils.py  frame_utils.py  init_utils.py  langgraph_utils.py  logger_utils.py  session_utils.py  sqlite_utils.py
