[project]
name = "chatboxd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.40.1",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.48",
    "langchain-openai>=0.2.8",
    "tabulate>=0.9.0",
]
