[project]
name = "chatboxd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.40.1",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.48",
    "langchain-openai>=0.2.8",
    "langchain>=0.3.7",
    "bs4>=0.0.2",
    "sqlalchemy>=2.0.36",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
]
